fix close button mobile landscape

--- a/assets/css/block/modal_container/__close/modal_container__close.css
+++ b/assets/css/block/modal_container/__close/modal_container__close.css
@@ -16,3 +16,9 @@
     right: 0;
   }
 }
+
+@media screen and (max-height: 544px) {
+  .modal_container__close {
+    top: 0;
+  }
+}
